--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -13,6 +13,7 @@
         android:text="@string/tag_id"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:layout_marginTop="160dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
