--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,20 @@
         android:id="@+id/homeFragment"
         android:name="com.mw.churchattendance.ui.home.HomeFragment"
         android:label="Home"
+        tools:layout="@layout/fragment_home">
+
+        <action
+            android:id="@+id/action_homeFragment_to_tagListFragment"
+            app:destination="@id/tagListFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/tagListFragment"
+        android:name="com.mw.churchattendance.ui.taglist.TagListFragment"
+        android:label="Home"
         tools:layout="@layout/fragment_home" />
+
 </navigation>
