--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,121 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.ChurchAttendance" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/saf_green</item>
+        <item name="colorPrimaryVariant">@color/saf_green</item>
+        <item name="colorOnPrimary">?attr/colorOnSurfaceInverse</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <item name="fontFamily">@font/futuramediumbt</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="bottomSheetDialogTheme">@style/CustomBottomSheetDialog</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="CustomBottomSheetDialog" parent="@style/ThemeOverlay.Material3.DayNight.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/CustomBottomSheet</item>
+    </style>
+
+    <style name="CustomBottomSheet" parent="Widget.Material3.BottomSheet">
+        <item name="shapeAppearanceOverlay">@style/CustomShapeAppearanceBottomSheetDialog</item>
+    </style>
+
+    <style name="CustomShapeAppearanceBottomSheetDialog" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">20dp</item>
+        <item name="cornerSizeTopLeft">20dp</item>
+        <item name="cornerSizeBottomRight">0dp</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
+    </style>
+
+    <!--Top level mwTheme to be used in AndroidManifest.xml-->
+    <style name="mwTheme" parent="Base.mwTheme" />
+
+<!--    <style name="Splash.mwTheme" parent="Theme.SplashScreen">-->
+<!--        <item name="windowSplashScreenBackground">@color/color_surface</item>-->
+<!--        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher_foreground</item>-->
+<!--        <item name="postSplashScreenTheme">@style/PostSplash.mw.Theme</item>-->
+<!--        <item name="android:navigationBarColor">@color/color_surface</item>-->
+<!--        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>-->
+<!--        <item name="android:windowLightStatusBar">true</item>-->
+<!--    </style>-->
+
+    <style name="PostSplash.mw.Theme" parent="Base.mwTheme">
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
+    </style>
+
+    <!--Base custom theme which will be shared in light theme-->
+    <style name="Base.mwTheme" parent="Base.MaterialThemeBuilder">
+        <!--Material color attributes -->
+        <item name="colorPrimary">@color/color_primary</item>
+        <item name="colorPrimaryVariant">@color/color_primary_variant</item>
+        <item name="colorSecondary">@color/color_secondary</item>
+        <item name="colorSecondaryVariant">@color/color_secondary_variant</item>
+
+        <item name="android:colorBackground">@color/color_background</item>
+        <item name="colorSurface">@color/color_surface</item>
+        <item name="colorError">@color/color_error</item>
+
+        <item name="colorOnPrimary">@color/color_on_primary</item>
+        <item name="colorOnSecondary">@color/color_on_secondary</item>
+        <item name="colorOnBackground">@color/color_on_background</item>
+        <item name="colorOnSurface">@color/color_on_surface</item>
+        <item name="colorOnError">@color/color_on_error</item>
+
+        <!--Material type attributes-->
+        <item name="textAppearanceHeadline1">@style/TextAppearance.type.mwTheme.Headline1</item>
+        <item name="textAppearanceHeadline2">@style/TextAppearance.type.mwTheme.Headline2</item>
+        <item name="textAppearanceHeadline3">@style/TextAppearance.type.mwTheme.Headline3</item>
+        <item name="textAppearanceHeadline4">@style/TextAppearance.type.mwTheme.Headline4</item>
+        <item name="textAppearanceHeadline5">@style/TextAppearance.type.mwTheme.Headline5</item>
+        <item name="textAppearanceHeadline6">@style/TextAppearance.type.mwTheme.Headline6</item>
+        <item name="textAppearanceSubtitle1">@style/TextAppearance.type.mwTheme.Subtitle1</item>
+        <item name="textAppearanceSubtitle2">@style/TextAppearance.type.mwTheme.Subtitle2</item>
+        <item name="textAppearanceBody1">@style/TextAppearance.type.mwTheme.Body1</item>
+        <item name="textAppearanceBody2">@style/TextAppearance.type.mwTheme.Body2</item>
+        <item name="textAppearanceButton">@style/TextAppearance.type.mwTheme.Button</item>
+        <item name="textAppearanceCaption">@style/TextAppearance.type.mwTheme.Caption</item>
+        <item name="textAppearanceOverline">@style/TextAppearance.type.mwTheme.Overline</item>
+
+        <!--Material shape attributes-->
+        <item name="shapeAppearanceSmallComponent">
+            @style/ShapeAppearance.mwTheme.SmallComponent
+        </item>
+        <item name="shapeAppearanceMediumComponent">
+            @style/ShapeAppearance.mwTheme.MediumComponent
+        </item>
+        <item name="shapeAppearanceLargeComponent">
+            @style/ShapeAppearance.mwTheme.LargeComponent
+        </item>
+
+        <!--Component styles-->
+        <item name="materialAlertDialogTheme">@style/ThemeOverlay.MaterialComponents.Dialog.Alert
+        </item>
+        <item name="toolbarStyle">@style/Widget.MaterialComponents.Toolbar.PrimarySurface</item>
+        <item name="textInputStyle">@style/Widget.mwTheme.TextInputLayout</item>
+    </style>
+
+    <style name="Base.MaterialThemeBuilder" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="alphaEmphasisHigh">@dimen/alpha_emphasis_high</item>
+        <item name="alphaEmphasisMedium">@dimen/alpha_emphasis_medium</item>
+        <item name="alphaEmphasisDisabled">@dimen/alpha_emphasis_disabled</item>
+
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
+
+        <!--Remap legacy AppCompat attributes to MaterialComponent attributes-->
+        <item name="colorPrimaryDark">?colorPrimaryVariant</item>
+        <item name="colorAccent">?colorPrimary</item>
+
+        <item name="android:statusBarColor">?colorPrimaryVariant</item>
+        <item name="android:navigationBarColor">@color/color_surface</item>
+        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">
+            @color/color_background
+        </item>
+    </style>
+
 </resources>
