--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="active_login">#ECF5EA</color>
     <color name="dark_pink">#FF0D8A</color>
 
-    <color name="color_primary">#43B02A</color>
+    <color name="color_primary">#000080</color>
     <color name="color_primary_variant">#2b8f14</color>
     <color name="color_secondary">#ffb81c</color>
     <color name="color_secondary_variant">#fe9416</color>
