--- a/app/src/main/res/layout/item_attendance.xml
+++ b/app/src/main/res/layout/item_attendance.xml
@@ -22,14 +22,14 @@
             android:id="@+id/tvChildName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@{attendance.childName}"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:textColor="@android:color/black"
             android:layout_marginBottom="4dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="@{attendance.childName}"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/tvViewDetails"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tvViewDetails" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <!-- View Details -->
         <TextView
@@ -39,8 +39,8 @@
             android:text="View Details"
             android:textColor="@android:color/holo_red_dark"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <!-- Parent Name -->
         <TextView
@@ -48,9 +48,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Parent: Mary Wangari"
-            app:layout_constraintTop_toBottomOf="@+id/tvChildName"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/tvChildName" />
 
         <!-- Class -->
         <TextView
@@ -58,9 +58,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@{attendance.className}"
-            app:layout_constraintTop_toBottomOf="@+id/tvParentName"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/tvParentName" />
 
         <!-- Last Checked In -->
         <TextView
@@ -68,24 +68,24 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:formattedTimestamp="@{attendance.checkInTime}"
-            app:layout_constraintTop_toBottomOf="@+id/tvClass"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/tvClass" />
 
         <!-- Badge -->
         <TextView
             android:id="@+id/badgeStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Present"
-            android:textColor="@android:color/white"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/badge_green_background"
             android:paddingHorizontal="12dp"
             android:paddingVertical="6dp"
-            android:background="@drawable/badge_green_background"
+            android:text="Present"
+            android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvLastCheckedIn"
-            android:layout_marginTop="8dp" />
+            app:layout_constraintTop_toBottomOf="@+id/tvLastCheckedIn" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
